# muti-iterm2-manager

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  rules.yaml  start.sh  stop.sh  ui-settings.yaml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: tech-spec-primary-focus-task.md  tech-spec-terminal-detach-attach.md  tech-spec-unified-grid-resize.md
_bmad-output/test-artifacts/: nfr-assess-validation-report.md  nfr-assessment.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: api-contracts.md  architecture.md  component-inventory.md  data-models.md  development-guide.md  development-workflow.md  implementation-plan.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
scripts/: inject-hooks.py
src/multi_iterm2_manager/: __init__.py  __main__.py  analyzer.py  codex_statusline.py  config.py  display.py  models.py  program_detection.py  server.py  service.py  state_store.py  summarizer.py
src/multi_iterm2_manager/app_monitor/: __init__.py  discover.py  models.py  routes.py  screenshot.py  service.py
src/multi_iterm2_manager/backend/: base.py  iterm2_backend.py  (+1 more)
tests/: test_adopt_all.py  test_analyzer.py  test_program_detection.py  test_screen_targeting.py  test_state_store.py  test_summary_config.py  test_summary_flow.py  test_terminal_cleanup.py
(+4 files in other folders)
